# mirror_hash

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  Dockerfile  Dockerfile.archlinux  README.md  build.sh  generate_blog_charts.py  run_tests.sh  start_dev_container.sh
analysis/: OPTIMIZATION_REPORT.md  QUALITY_TESTS.md  hash_quality.hpp  run_analysis.cpp
benchmarks/: benchmark.cpp  chart_benchmark.cpp  comprehensive_benchmark.cpp  final_blog_numbers.cpp  gxhash_comparison.cpp  micro_variant_test.cpp  official_comparison.cpp  optimization_test.cpp  overlapping_read_test.cpp  policy_comparison.cpp  quality_test.cpp  quality_verification.cpp  smhasher_core_tests.cpp  smhasher_tests.cpp  standalone_benchmark.cpp  string_struct_benchmark.cpp
examples/: basic_usage.cpp  custom_algorithm.cpp  hashtable_integration.cpp
include/: mirror_hash_unified.hpp
include/mirror_hash/: mirror_hash.hpp
profiling/: aes_deep_analysis.cpp  arm64.s  asm_test.cpp  callgrind_profiling.txt  instruction_count_actual.txt  instruction_count_comparison.txt  llvm_mca_analysis.txt  memory_bandwidth_test.cpp  mirror_hash_arm64.s  profile_benchmark.cpp  small_input_overhead_test.cpp  statistical_benchmark.txt  valgrind_instruction_count.txt
profiling/assembly/: KEY_INSTRUCTIONS.md  actual_implementation_asm.txt  assembly_analysis.txt  assembly_comparison.txt  rapidhash_arm.s  rapidhash_arm64.s
profiling/benchmarks/: actual_micro_benchmark.txt  actual_nano_benchmark.txt  arm64_comprehensive_results.txt  arm64_inline_benchmark_results.txt  arm64_nano_benchmark_results.txt  bulk_bench_results.txt  bulk_range_bench_results.txt  comprehensive_nano_micro_bench.txt  comprehensive_results.txt  comprehensive_v2_results.txt  docker_arm64_benchmark_results.txt  docker_benchmark_results.txt  docker_v6_benchmark.txt  docker_v7_benchmark.txt  docker_v8_benchmark.txt  docker_x86_64_benchmark_results.txt  fresh_benchmark_2025-12-27.txt  full_comparison_v3_results.txt  full_comparison_v4_results.txt  full_comparison_v5_results.txt  gap_analysis_results.txt  isolated_nano_results.txt  mh_micro_vs_rapidhashMicro_bench.txt  micro_bench_results.txt  micro_bench_results_v2.txt  micro_bulk_bench_results.txt  nano_advanced_bench_results.txt  nano_bench_results_v2.txt  nano_micro_results.txt  native_arm64_benchmark_results.txt  native_arm_benchmark.txt  native_macos_aes_benchmark_results.txt  rigorous_aes_benchmark_results.txt  speculative_analysis_results.txt  struct_benchmark_results.txt  v11_benchmark_results.txt  v9_benchmark_results.txt
profiling/smhasher/: smhasher_mh_bulk_results.txt  smhasher_mh_micro_results.txt  smhasher_mirror_hash_v2_results.txt  smhasher_nano_spec_results.txt  smhasher_nano_v2_fixed_results.txt  smhasher_nano_v2_results.txt  smhasher_nano_v2_secrets_fix_results.txt  smhasher_nano_v2_seed_fix_results.txt  smhasher_rapidhashMicro_results.txt  smhasher_rapidhashNano_results.txt  smhasher_unified_results.txt  smhasher_v8_results.txt  smhasher_v9_results.txt
tests/: test_mirror_hash.cpp
